# MCDA

./: .gitignore  README.md  pyproject.toml
firenet/: __init__.py
firenet/cloud/: __init__.py  policy_mcda.py
firenet/edge/: __init__.py  fuzzy_mcda.py
firenet/node/: __init__.py  mcda.py
firenet/utils/: __init__.py  logging.py  normalization.py
tests/: __init__.py  test_cloud_mcda.py  test_edge_mcda.py  test_node_mcda.py  test_utils.py
