[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "firenet-mcda"
version = "1.0.0"
description = "FIRENET - Fire Identification and Response Network for Early Tracking using MCDA"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["fire detection", "MCDA", "IoT", "fuzzy logic", "AHP", "wildfire"]
authors = [
    {name = "FIRENET Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
"Homepage" = "https://github.com/bhardwaj-kushagra/MCDA"
"Bug Tracker" = "https://github.com/bhardwaj-kushagra/MCDA/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["firenet*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
